model creations for integrations and integration changes

--- a/deployment/ansible/development/roles/pycharm/templates/remote-mappings.xml.j2
+++ b/deployment/ansible/development/roles/pycharm/templates/remote-mappings.xml.j2
@@ -11,6 +11,9 @@
             {% if use_geosafe %}
               <mapping local-root="$PROJECT_DIR$/src/geosafe" remote-root="/usr/src/geosafe" />
             {% endif %}
+            {% if use_fluentgrid %}
+              <mapping local-root="$PROJECT_DIR$/src/fluentgrid" remote-root="/usr/src/fluentgrid" />
+            {% endif %}
             </list>
           </settings>
         </remote-mappings>
