--- a/src/fluentgrid/templates/geosafe/analysis/create.html
+++ b/src/fluentgrid/templates/geosafe/analysis/create.html
@@ -424,7 +424,7 @@
     {% include "geosafe/analysis/modal/analysis_confirmation.html" %}
     {% include "geosafe/analysis/modal/impact_card.html" %}
     {% include "geosafe/analysis/modal/iframe_modal.html" %}
-    {% include "modal/send_event_card.html" %}
+    {% include "send_event.html" %}
     <div id="map" style="width: 100%; height: 100%; position:relative; margin-left: 70px; ">
         <div class="slow-loading">
             <i class="fa fa-spinner fa-spin"></i>&nbsp;Please wait while the page is loading....
