--- a/src/fluentgrid/templates/geosafe/analysis/list.html
+++ b/src/fluentgrid/templates/geosafe/analysis/list.html
@@ -1,43 +1,54 @@
 {% extends 'geonode_base.html' %}
 {% load staticfiles %}
+{% load bootstrap_tags %}
+{% load i18n avatar_tags %}
 {% block extra_head %}
-    <link rel="stylesheet" href="{% static 'geosafe/css/main.css' %}" />
-    <link rel="stylesheet" href="{% static 'geosafe/css/jquery.dynatable.css' %}" />
+    <link rel="stylesheet" href="{% static 'geosafe/css/main.css' %}"/>
+    <link rel="stylesheet" href="{% static 'geosafe/css/jquery.dynatable.css' %}"/>
 {% endblock %}
 {% block body %}
+    {% include "send_event.html" %}
     <style>
-        .btn .fa-check{
+        .btn .fa-check {
             display: none;
         }
-        .btn.active .fa-check{
+
+        .btn.active .fa-check {
             display: inline-block;
             color: #50cf5c;
         }
-        .btn .fa-close{
+
+        .btn .fa-close {
             display: inline-block;
             color: #f15a2b;
         }
-        .btn.active .fa-close{
+
+        .btn.active .fa-close {
             display: none;
         }
-        .btn.processing .fa-close{
+
+        .btn.processing .fa-close {
             display: none;
         }
-        .btn .fa-spinner{
+
+        .btn .fa-spinner {
             display: none;
         }
-        .btn.processing .fa-spinner{
+
+        .btn.processing .fa-spinner {
             display: inline-block;
         }
 
         .save-analysis.processing .onoffswitch-inner,
-        .save-analysis.processing .onoffswitch-switch{
+        .save-analysis.processing .onoffswitch-switch {
             display: none;
         }
-        .save-analysis.processing{
+
+        .save-analysis.processing {
             width: auto;
         }
-        .save-analysis.processing .processing-indicator{
+
+        .save-analysis.processing .processing-indicator {
             display: inline-block;
             white-space: nowrap;
             height: 30px;
@@ -45,15 +56,16 @@
             padding-right: 10px;
             padding-top: 5px;
         }
-        .save-analysis .processing-indicator{
+
+        .save-analysis .processing-indicator {
             display: none;
         }
 
-        #user-filter-group{
+        #user-filter-group {
             margin-right: 10px;
         }
 
-        .download-link{
+        .download-link {
             white-space: nowrap;
         }
     </style>
@@ -79,10 +91,10 @@
                 <tr>
                     <th>User</th>
                     <th>Date Created</th>
-{#                    <th>Exposure</th>#}
-{#                    <th>Hazard</th>#}
-{#                    <th>Aggregation</th>#}
-{#                    <th>Extent</th>#}
+                    {#                    <th>Exposure</th>#}
+                    {#                    <th>Hazard</th>#}
+                    {#                    <th>Aggregation</th>#}
+                    {#                    <th>Extent</th>#}
                     <th>Impact Function Name</th>
                     <th>Result</th>
                     <th>View</th>
@@ -90,7 +102,7 @@
                         <th>Save</th>
                     {% endif %}
                     <th>Download</th>
-                <th>Actions</th>
+                    <th>Actions</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -106,18 +118,18 @@
                                 Result not yet created
                             {% endif %}
                         </td>
-{#                        <td>#}
-{#                            <a href="{% url 'layer_detail' layername=analysis.exposure_layer.typename %}">{{ analysis.exposure_layer }}</a>#}
-{#                        </td>#}
-{#                        <td>#}
-{#                            <a href="{% url 'layer_detail' layername=analysis.hazard_layer.typename %}">{{ analysis.hazard_layer }}</a>#}
-{#                        </td>#}
-{#                        <td>#}
-{#                            <a href="{% url 'layer_detail' layername=analysis.aggregation_layer.typename %}">{{ analysis.aggregation_layer }}</a>#}
-{#                        </td>#}
-{#                        <td>#}
-{#                            {{ analysis.get_extent_option_display }}#}
-{#                        </td>#}
+                        {#                        <td>#}
+                        {#                            <a href="{% url 'layer_detail' layername=analysis.exposure_layer.typename %}">{{ analysis.exposure_layer }}</a>#}
+                        {#                        </td>#}
+                        {#                        <td>#}
+                        {#                            <a href="{% url 'layer_detail' layername=analysis.hazard_layer.typename %}">{{ analysis.hazard_layer }}</a>#}
+                        {#                        </td>#}
+                        {#                        <td>#}
+                        {#                            <a href="{% url 'layer_detail' layername=analysis.aggregation_layer.typename %}">{{ analysis.aggregation_layer }}</a>#}
+                        {#                        </td>#}
+                        {#                        <td>#}
+                        {#                            {{ analysis.get_extent_option_display }}#}
+                        {#                        </td>#}
                         <td>
                             {{ analysis.impact_function_name }}
                         </td>
@@ -125,61 +137,72 @@
                             {% if not analysis.get_task_result %}
                                 Analysis not yet running
                             {% elif analysis.get_task_state == 'SUCCESS' %}
-                                <a href="{% url 'layer_detail' layername=analysis.impact_layer.typename %}"> {{ analysis.impact_layer }} <br /> Duration: {{ analysis.start_time|timesince:analysis.end_time }} </a>
+                                <a href="{% url 'layer_detail' layername=analysis.impact_layer.typename %}"> {{ analysis.impact_layer }}
+                                    <br/> Duration: {{ analysis.start_time|timesince:analysis.end_time }} </a>
                             {% else %}
-                                <div>Task Status: <span class="label label-{{ analysis.get_label_class }}">{{ analysis.get_task_state }}</span></div>
-                                        {{ analysis.hazard_layer }} on {{ analysis.exposure_layer }} <br />Start Time: {{ analysis.start_time }}
+                                <div>Task Status: <span
+                                        class="label label-{{ analysis.get_label_class }}">{{ analysis.get_task_state }}</span>
+                                </div>
+                                {{ analysis.hazard_layer }} on {{ analysis.exposure_layer }} <br/>Start Time:
+                                {{ analysis.start_time }}
                                 {% if analysis.get_task_state == 'FAILURE' %}
-                                <div>
-                                    <form action="{% url 'geosafe:rerun-analysis' analysis_id=analysis.id %}" method="post">
-                                        {% csrf_token %}
-                                        <input type="hidden" id="analysis_id" value="{{ analysis.id }}" />
-                                        <button type="submit" class="btn btn-primary">Rerun Analysis</button>
-                                    </form>
-                                </div>
+                                    <div>
+                                        <form action="{% url 'geosafe:rerun-analysis' analysis_id=analysis.id %}"
+                                              method="post">
+                                            {% csrf_token %}
+                                            <input type="hidden" id="analysis_id" value="{{ analysis.id }}"/>
+                                            <button type="submit" class="btn btn-primary">Rerun Analysis</button>
+                                        </form>
+                                    </div>
                                 {% elif analysis.get_task_state == 'PENDING' and user.is_superuser %}
-                                <div>
-                                    <form action="{% url 'geosafe:cancel-analysis' analysis_id=analysis.id %}" method="post">
-                                        {% csrf_token %}
-                                        <input type="hidden" id="analysis_id" value="{{ analysis.id }}" />
-                                        <button type="submit" class="btn btn-primary">Cancel Analysis</button>
-                                    </form>
-                                </div>
+                                    <div>
+                                        <form action="{% url 'geosafe:cancel-analysis' analysis_id=analysis.id %}"
+                                              method="post">
+                                            {% csrf_token %}
+                                            <input type="hidden" id="analysis_id" value="{{ analysis.id }}"/>
+                                            <button type="submit" class="btn btn-primary">Cancel Analysis</button>
+                                        </form>
+                                    </div>
                                 {% endif %}
                             {% endif %}
                         </td>
                         <td>
                             {% if analysis.report_map %}
                                 <div>
-                                    <a class="download-link" href="{% url 'geosafe:download-report' analysis_id=analysis.id data_type='map' %}">Map Report</a>
+                                    <a class="download-link"
+                                       href="{% url 'geosafe:download-report' analysis_id=analysis.id data_type='map' %}">Map
+                                        Report</a>
                                 </div>
                             {% endif %}
                             {% if analysis.report_table %}
                                 <div>
-                                    <a class="download-link" href="{% url 'geosafe:download-report' analysis_id=analysis.id data_type='table' %}">Table Report</a>
+                                    <a class="download-link"
+                                       href="{% url 'geosafe:download-report' analysis_id=analysis.id data_type='table' %}">Table
+                                        Report</a>
                                 </div>
                             {% endif %}
                             <div>
-                                <a class="download-link" href="{% url 'geosafe:analysis-create' pk=analysis.id %}">Analysis Page</a>
+                                <a class="download-link" href="{% url 'geosafe:analysis-create' pk=analysis.id %}">Analysis
+                                    Page</a>
                             </div>
                         </td>
                         {% if user.username %}
-                        <td>
-                            <div class="onoffswitch save-analysis">
-                                <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox"
-                                       id="save_analysis_{{ analysis.id }}"
-                                       {% if analysis.keep %}checked{% endif %}
-                                       data-id="{{ analysis.id }}">
-                                <label class="onoffswitch-label" for="save_analysis_{{ analysis.id }}">
+                            <td>
+                                <div class="onoffswitch save-analysis">
+                                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox"
+                                           id="save_analysis_{{ analysis.id }}"
+                                           {% if analysis.keep %}checked{% endif %}
+                                           data-id="{{ analysis.id }}">
+                                    <label class="onoffswitch-label" for="save_analysis_{{ analysis.id }}">
                                     <span class="processing-indicator">
                                         <i class="fa fa-spinner fa-spin"></i>
                                         PROCESSING
                                     </span>
-                                    <span class="onoffswitch-inner"></span>
-                                    <span class="onoffswitch-switch"></span>
-                                </label>
-                            </div>
-                        </td>
+                                        <span class="onoffswitch-inner"></span>
+                                        <span class="onoffswitch-switch"></span>
+                                    </label>
+                                </div>
+                            </td>
                         {% endif %}
                         <td>
                             {% if analysis.impact_layer %}
@@ -188,11 +211,20 @@
                                 Result not yet created
                             {% endif %}
                         </td>
-                    <td>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal">
-                                Send event
-                            </button>
-                        </td>
+                        {% if user.username %}
+                            <td>
+                                <button type="button" onclick="open_send_event_modal({{ analysis.id }});"
+                                        class="btn btn-primary"
+                                        data-dismiss="modal">
+                                    Send event
+                                </button>
+                            </td>
+                        {% endif %}
+                        {% if not user.username %}
+                            <td>
+                                Login for actions
+                            </td>
+                        {% endif %}
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -201,42 +233,62 @@
             <p>No analysis yet. <a href="{% url "geosafe:analysis-create" %}">Why not creating one?</a></p>
         {% endif %}
     </div>
+
 {% endblock %}
 
 {% block extra_script %}
-<script type="text/javascript" src="{% static 'geosafe/js/jquery.dynatable.js' %}">
-</script>
-<script type="text/javascript" src="{% static 'geosafe/js/analysis.js' %}"></script>
-<script type="text/javascript">
+    <script type="text/javascript" src="{% static 'geosafe/js/jquery.dynatable.js' %}">
+    </script>
+    <script type="text/javascript" src="{% static 'geosafe/js/analysis.js' %}"></script>
+    <script type="text/javascript">
 
-$(document).ready(function(){
+        $(document).ready(function () {
 
-    var analysis_list_dynatable = $("#analysis-list")
-            .bind('dynatable:init', function (e, dynatable) {
-                dynatable.queries.functions['user'] = function(record, queryValue){
-                    return $(record['user']).text() == queryValue;
+            var analysis_list_dynatable = $("#analysis-list")
+                .bind('dynatable:init', function (e, dynatable) {
+                    dynatable.queries.functions['user'] = function (record, queryValue) {
+                        return $(record['user']).text() == queryValue;
+                    }
+                }).dynatable().data('dynatable');
+
+            $(".save-analysis input").change(function () {
+                var id = $(this).attr('data-id');
+                var urlpattern = '{% url "geosafe:toggle-analysis-saved" analysis_id=-1 %}';
+                toggle_analysis_saved(urlpattern, id);
+            });
+
+            $("#user-filter-group label").on('click', function () {
+                if ($(this).find('input').val() == 'all') {
+                    analysis_list_dynatable.queries.remove('user');
                 }
-            }).dynatable().data('dynatable');
+                else {
+                    {% if user.username %}
+                        analysis_list_dynatable.queries.add('user', '{{ user.username }}');
+                    {% else %}
+                        analysis_list_dynatable.queries.add('user', 'AnonymousUser');
+                    {% endif %}
+                }
+                analysis_list_dynatable.process();
+            });
+        });
 
-    $(".save-analysis input").change(function(){
-        var id=$(this).attr('data-id');
-        var urlpattern = '{% url "geosafe:toggle-analysis-saved" analysis_id=-1 %}';
-        toggle_analysis_saved(urlpattern, id);
-    });
 
-    $("#user-filter-group label").on('click', function () {
-        if($(this).find('input').val()=='all'){
-            analysis_list_dynatable.queries.remove('user');
+        function open_send_event_modal(pk) {
+
+            url = "/fluentgrid/analysis/open-event-modal/" + pk + '';
+            $.get(url, function (data) {
+                if (data) {
+                    $("#send-event-modal").replaceWith(data);
+                    $("#send-event-modal").modal();
+
+                }
+            });
         }
-        else{
-            {% if user.username %}
-                analysis_list_dynatable.queries.add('user', '{{ user.username }}');
-            {% else %}
-                analysis_list_dynatable.queries.add('user', 'AnonymousUser');
-            {% endif %}
+
+        function get_local_time(date) {
+
+            var myDate = new Date(date);
+            return myDate
         }
-        analysis_list_dynatable.process();
-    });
-});
-</script>
+    </script>
 {% endblock %}
