Integration to stage

--- a/src/fluentgrid/templates/geonode_base.html
+++ b/src/fluentgrid/templates/geonode_base.html
@@ -253,7 +253,7 @@
   {% endblock footer %}
 
 
-    <!-- Modal must stay outside the navbar -->
+    <!-- Modal m -->
     {% if not user.is_authenticated %}
     <div class="modal fade" id="SigninModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-sm">
